--- a/rdd-spike/src/main/resources/application-dev.yml
+++ b/rdd-spike/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8880
+  port: 8881
   servlet:
     context-path: /rdd
 
@@ -13,12 +13,18 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8881/eureka
+      defaultZone: http://localhost:8880/eureka
 zuul:
   host:
     connect-timeout-millis: 15000
     socket-timeout-millis: 15000
   ignored-services: '*'
+  routes:
+    rdd-distribution:
+      path: /distribution/**
+      serviceId: rdd-distribution
+      stripPrefix: true
+      sensitiveHeaders:
 
 hystrix:
   command:
