--- a/rdd-distribution/src/main/resources/application-dev.yml
+++ b/rdd-distribution/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 info:
-  name: RDD - Registro Digitale Ditribuito - Dispositivo di Distribuzione - Molecola (Development)
+  name: RDD - Dispositivo di Distribuzione - Molecola (Development)
   artifact: '@project.artifactId@'
   version: '@project.version@'
 
@@ -32,3 +32,7 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8880/eureka
+
+rdd:
+  username: rdd
+  password: rdd
