Correlation ID added in messages

--- a/rdd-distribution/src/main/resources/application-dev.yml
+++ b/rdd-distribution/src/main/resources/application-dev.yml
@@ -20,9 +20,9 @@ spring:
           destination: rdd.topic
       rabbit:
         bindings:
-          entryPropositionChannel:
+          requestChannel:
             producer:
-              routingKeyExpression: "'rddEntryPropositionChannel'"
+              routingKeyExpression: "'rddRequestChannel'"
 
 eureka:
   instance:
