--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>rdd-service-registry</module>
         <module>rdd-spike</module>
         <module>rdd-distribution</module>
+        <module>rd-scheduler</module>
     </modules>
 
     <dependencyManagement>
