--- a/rdd-scheduler/pom.xml
+++ b/rdd-scheduler/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>jar</packaging>
-    <artifactId>rd-scheduler</artifactId>
+    <artifactId>rdd-scheduler</artifactId>
     <description>RDD - Registro Digitale Ditribuito - Dispositivo di Programmazione - Molecola</description>
 
     <dependencies>
