Exchange and Queue configuration fixed

--- a/rdc-distribution/src/test/resources/application-test.yml
+++ b/rdc-distribution/src/test/resources/application-test.yml
@@ -10,14 +10,11 @@ spring:
     addresses: amqp://server
   cloud:
     stream:
-      bindings:
-        entryPropositionChannel:
-          destination: rdc.test.topic
       rabbit:
         bindings:
           requestChannel:
             producer:
-              routingKeyExpression: "'rdcRequestChannel'"
+              routingKeyExpression: "'rdcTestRequestChannel'"
 
 rdc:
   username: test
