JUnit Test added with code refactoring

--- a/rdc-node/src/test/resources/application-test.yml
+++ b/rdc-node/src/test/resources/application-test.yml
@@ -31,5 +31,9 @@ difficult:
   level: 1
 
 required:
+  startup: false
   validation:
     number: 0
+
+spike:
+  url: http://localhost:8881/rdc/distribution/spike
