Flag to active corruption detection scheduled instruction / JUnit test added

--- a/rdc-scheduler/src/main/resources/application-dev.yml
+++ b/rdc-scheduler/src/main/resources/application-dev.yml
@@ -37,5 +37,7 @@ mail:
     starttls:
       enable: true
 
-spike:
-  url: http://localhost:8881/rdc/distribution/spike
+rdc:
+  instructionScheduled: true
+  spike:
+    url: http://localhost:8881/rdc/distribution/spike
