--- a/rdc-node/src/main/resources/application-dev.yml
+++ b/rdc-node/src/main/resources/application-dev.yml
@@ -31,10 +31,9 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8880/eureka
 
-required:
+rdc:
   startup: false
   difficult:
     level: 1
-
-spike:
-  url: http://localhost:8881/rdc/distribution/spike
+  spike:
+    url: http://localhost:8881/rdc/distribution/spike
