--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
-        <swagger.version>2.9.2</swagger.version>
         <lombok.version>1.18.16</lombok.version>
         <jackson.version>2.13.0</jackson.version>
     </properties>
@@ -28,7 +27,7 @@
     <modules>
         <module>rd-service-registry</module>
         <module>rd-spike</module>
-        <module>rdc-distribution</module>
+        <module>rd-distribution</module>
         <module>rd-scheduler</module>
         <module>rdc-node</module>
     </modules>
