--- a/rd-scheduler/pom.xml
+++ b/rd-scheduler/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rdc-parent</artifactId>
-        <groupId>org.rdc</groupId>
+        <artifactId>rd-parent</artifactId>
+        <groupId>org.rd</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>jar</packaging>
-    <artifactId>rdc-scheduler</artifactId>
-    <description>RDC - Registro Digitale Contribuito - Dispositivo di Programmazione - Molecola</description>
+    <artifactId>rd-scheduler</artifactId>
+    <description>RD - Registro Digitale - Dispositivo di Programmazione - Molecola</description>
 
     <dependencies>
         <dependency>
