Same queue for requestIntegrityChannel exchange

--- a/rd-node/src/main/resources/application-dev.yml
+++ b/rd-node/src/main/resources/application-dev.yml
@@ -9,6 +9,9 @@ spring:
         requestChannel:
           destination: requestChannel
           group: nodeGroup
+        requestIntegrityChannel:
+          destination: requestIntegrityChannel
+          group: nodeGroup
         responseChannel:
           producer:
             routingKeyExpression: "'rdResponseChannel'"
